--- a/src/posts/2020-02-02-awareness-and-action.ejs
+++ b/src/posts/2020-02-02-awareness-and-action.ejs
@@ -9,31 +9,60 @@ date: 2021-03-26T00:00:00Z
         <img class="carousel-cell" src="/assets/images/posts/fg00-home.png" alt="video-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/fg01-video.png" alt="video-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/fg02-video.png" alt="video-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/fg03-type.png" alt="video-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/fg04-done.png" alt="video-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/fg05-redemption.png" alt="video-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/fg06-done.png" alt="video-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/fg07-learning.png" alt="video-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/fg08-home.png" alt="video-based learning materials screenshot">
     </div>
 
     <h2>Quiz-based Learning Materials</h2>
-    <div>
-        <img src="/assets/images/posts/qz.gif" alt="quiz-based learning materials gif">
+    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+        <img class="carousel-cell" src="/assets/images/posts/qz00-home.png" alt="quiz-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/qz01-five-types.png" alt="quiz-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/qz02-kicking.png" alt="quiz-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/qz03-kissing.png" alt="quiz-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/qz04-names.png" alt="quiz-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/qz05-identity.png" alt="quiz-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/qz06-done.png" alt="quiz-based learning materials screenshot">
     </div>
 
     <h2>Skill-based learning Material</h2>
-    <div>
-        <img src="/assets/images/posts/ss.gif" alt="skill-based learning materials gif">
+    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+        <img class="carousel-cell" src="/assets/images/posts/ss00-home.png" alt="skill-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/ss01-emotion.png" alt="skill-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/ss02-bodies.png" alt="skill-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/ss03-money.png" alt="skill-based learning materials screenshot">
     </div>
 
     <h2>Static Learning Material</h2>
-    <div>
-        <img src="/assets/images/posts/ss.gif" alt="skill-based learning materials gif">
+    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+        <img class="carousel-cell" src="/assets/images/posts/vp01-five-types.png" alt="static learning material screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/vp02-physical-abuse.png" alt="static learning material screenshot">
     </div>
 
     <h2>Grounding</h2>
-    <div>
-        <img src="/assets/images/posts/gg.gif" alt="grounding gif">
+    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+        <img class="carousel-cell" src="/assets/images/posts/gg00-home.png" alt="grounding screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/gg01-five-types.png" alt="grounding screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/gg03-physical.png" alt="grounding screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/gg04-boxes.png" alt="grounding screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/gg05-examples.png" alt="grounding screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/gg06-warninggs.png" alt="grounding screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/gg07-boxes.png" alt="grounding screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/gg08-done.png" alt="grounding screenshot">
     </div>
 
     <h2>Motivation</h2>
-    <div>
-        <img src="/assets/images/posts/vp.gif" alt="motivation gif">
+    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+        <img class="carousel-cell" src="/assets/images/posts/vp00-sad.png" alt="static learning material screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/vp01-five-types.png" alt="static learning material screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/vp02-physical-abuse.png" alt="static learning material screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/vp03-neutral.png" alt="static learning material screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/vp04-physical-abuse.png" alt="static learning material screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/vp05-physical-example.png" alt="static learning material screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/vp06-happy.png" alt="static learning material screenshot">
     </div>
 </div>
 
