--- a/src/_includes/layouts/post.ejs
+++ b/src/_includes/layouts/post.ejs
@@ -5,9 +5,9 @@ layout: layouts/base.ejs
 <article>
   <header>
     <h1 class="text-center font-bold text-3xl text-gray-800"><%= title %></h1>
-    <div class="text-center text-sm mb-8">
+    <!-- <div class="text-center text-sm mb-8">
       <%= this.dateFns.format(new Date(date), 'LLLL d, yyyy') %>
-    </div>
+    </div> -->
   </header>
 
   <section class="content"><%- content %></section>
