--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,7 +14,7 @@ eleventyComputed:
   <li class="mb-3 flex justify-between">
     <a href="<%= post.url %>"><%= post.data.title %></a>
 
-    <div><%= this.dateFns.format(new Date(post.data.date), 'LLLL d, yyyy') %></div>
+    <!-- <div><%= this.dateFns.format(new Date(post.data.date), 'LLLL d, yyyy') %></div> -->
   </li>
   <% }) %>
 </ul>
