--- a/src/posts/2020-02-02-awareness-and-action.ejs
+++ b/src/posts/2020-02-02-awareness-and-action.ejs
@@ -4,21 +4,24 @@ description: Images and clips from the HTML prototype.
 date: 2021-03-26T00:00:00Z
 ---
 <div>
+    <p>
+        Below we have the set of screenshots that were shown and discussed in the autobiographical co-design process as part of each of the 6 design concepts. 
+        Each design concept was presented and discussed as if it were a snippet from a lesson within the app. 
+        Please click on the arrows to move between the screenshots used for each design concept.
+    </p>
+</div>
+<div>
     <h2>Video-based Learning Material</h2>
-    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+    <div class="main-carousel" data-flickity='{"autoPlay":false}'>
         <img class="carousel-cell" src="/assets/images/posts/fg00-home.png" alt="video-based learning materials screenshot">
-        <img class="carousel-cell" src="/assets/images/posts/fg01-video.png" alt="video-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/fg02-video.png" alt="video-based learning materials screenshot">
+        <img class="carousel-cell" src="/assets/images/posts/fg05-redemption.png" alt="video-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/fg03-type.png" alt="video-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/fg04-done.png" alt="video-based learning materials screenshot">
-        <img class="carousel-cell" src="/assets/images/posts/fg05-redemption.png" alt="video-based learning materials screenshot">
-        <img class="carousel-cell" src="/assets/images/posts/fg06-done.png" alt="video-based learning materials screenshot">
-        <img class="carousel-cell" src="/assets/images/posts/fg07-learning.png" alt="video-based learning materials screenshot">
-        <img class="carousel-cell" src="/assets/images/posts/fg08-home.png" alt="video-based learning materials screenshot">
     </div>
 
     <h2>Quiz-based Learning Materials</h2>
-    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+    <div class="main-carousel" data-flickity='{"autoPlay":false}'>
         <img class="carousel-cell" src="/assets/images/posts/qz00-home.png" alt="quiz-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/qz01-five-types.png" alt="quiz-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/qz02-kicking.png" alt="quiz-based learning materials screenshot">
@@ -29,7 +32,7 @@ date: 2021-03-26T00:00:00Z
     </div>
 
     <h2>Skill-based learning Material</h2>
-    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+    <div class="main-carousel" data-flickity='{"autoPlay":false}'>
         <img class="carousel-cell" src="/assets/images/posts/ss00-home.png" alt="skill-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/ss01-emotion.png" alt="skill-based learning materials screenshot">
         <img class="carousel-cell" src="/assets/images/posts/ss02-bodies.png" alt="skill-based learning materials screenshot">
@@ -37,13 +40,13 @@ date: 2021-03-26T00:00:00Z
     </div>
 
     <h2>Static Learning Material</h2>
-    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+    <div class="main-carousel" data-flickity='{"autoPlay":false}'>
         <img class="carousel-cell" src="/assets/images/posts/vp01-five-types.png" alt="static learning material screenshot">
         <img class="carousel-cell" src="/assets/images/posts/vp02-physical-abuse.png" alt="static learning material screenshot">
     </div>
 
     <h2>Grounding</h2>
-    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+    <div class="main-carousel" data-flickity='{"autoPlay":false}'>
         <img class="carousel-cell" src="/assets/images/posts/gg00-home.png" alt="grounding screenshot">
         <img class="carousel-cell" src="/assets/images/posts/gg01-five-types.png" alt="grounding screenshot">
         <img class="carousel-cell" src="/assets/images/posts/gg03-physical.png" alt="grounding screenshot">
@@ -55,7 +58,7 @@ date: 2021-03-26T00:00:00Z
     </div>
 
     <h2>Motivation</h2>
-    <div class="main-carousel" data-flickity='{"autoPlay":true}'>
+    <div class="main-carousel" data-flickity='{"autoPlay":false}'>
         <img class="carousel-cell" src="/assets/images/posts/vp00-sad.png" alt="static learning material screenshot">
         <img class="carousel-cell" src="/assets/images/posts/vp01-five-types.png" alt="static learning material screenshot">
         <img class="carousel-cell" src="/assets/images/posts/vp02-physical-abuse.png" alt="static learning material screenshot">
